# pretty-much-nothing

./: CMakeLists.txt
include/: Game.h  Menu.h
src/: main.cpp
